fixed alignment issue with delete icon in search bar

--- a/modules/taskman.css
+++ b/modules/taskman.css
@@ -34,12 +34,22 @@
   color: green;
 }
 
+
 /*
  * Small alignment issue with select menu in header
  */
 
 #task-sortby-button {
   margin-top: -0.5em;
+}
+
+
+/*
+ * Small alignment issue with delete icon in search bar
+ */
+
+.ui-input-search .ui-input-clear:after {
+  margin-top: -18px;
 }
 
 
